@@ -43,4 +43,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 033 ==> 273534 : Showfoto crashes (Segmentation fault) when run.
 034 ==> 263954 : digiKam crashes when trying to re-download new pictures from SD card.
 035 ==> 283847 : Wrong edited photo on image editor.
-036 ==> 
+036 ==> 284909 : Manually built 2.2.0 digikam crashes in first time settings selection.
+037 ==> 
